added lasagna page to index

--- a/index.html
+++ b/index.html
@@ -3,4 +3,11 @@
 <h1>
 Odin Recipe's
 </h1>
+<body>
+    <ul>
+        <li>
+            <a href="file:///C:/Users/GamerX/repos/git_recipes/odin-recipes/lasagna.html">Lasagna</a>
+        </li>
+    </ul>
+</body>
 </html>
