fixed link to lasagna page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Odin Recipe's
 <body>
     <ul>
         <li>
-            <a href="file:///C:/Users/GamerX/repos/git_recipes/odin-recipes/lasagna.html">Lasagna</a>
+            <a href="https://apere855.github.io/git_recipes/odin-recipes/lasagna.html">Lasagna</a>
         </li>
     </ul>
 </body>
