added css to site

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
+
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+
+<div class="container">
+    <img src="https://avatars.githubusercontent.com/u/4441966?s=280&v=4" alt="logo" class="image">
+    <div class="middle">
+        <div class="text"><a href="https://github.com/apere855/git_recipes">My First Git Project</a></div>
+    </div>
+</div>
+</head>
+
+
 <h1>
 Odin Recipe's
 </h1>
+
+
 <body>
-    <ul>
-        <li>
-            <a href="https://apere855.github.io/git_recipes/odin-recipes/lasagna.html">Lasagna</a>
-        </li>
-    </ul>
+    <div class="LAcontainer">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2019%2F11%2F994958.jpg" alt="lasagna" class="LAimage">
+        <div class="middle">
+            <div class="text"><a href="https://apere855.github.io/git_recipes/odin-recipes/lasagna.html">Lasagna</a></div>
+        </div>
+    </div>
 </body>
+
+
 </html>
