--- a/odin-recipes/lasagna.html
+++ b/odin-recipes/lasagna.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <h1> 
     Lasagna
 </h1>
 <body>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2019%2F11%2F994958.jpg" width="600" height="450">
+    <img alt="lasagna" src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2019%2F11%2F994958.jpg" width="600" height="450">
 <br>
 </br>
     <b>Ingredients</b>
